feat: agregar soporte inicial de imagenes en marketplace
